<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.teamchat.Activity.LoginActivity"
    tools:showIn="@layout/activity_login"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <!--Avatar-->
        <org.teamchat.Helper.SquareImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_add"
            android:id="@+id/avatar" />

        <!--Username -->
        <EditText
            android:id="@+id/input_name"
            android:maxLength="20"
            android:inputType="text"
            android:digits="@string/accepted_digits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name" />

        <!--Password-->
        <EditText
            android:id="@+id/input_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password" />

        <!--Repeat Password-->
        <EditText
            android:id="@+id/input_repeat_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_repeat_password" />

        <!--Email-->
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />

        <!--Full Name-->
        <EditText
                android:id="@+id/input_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:digits="@string/accepted_digits"
                android:hint="@string/hint_full_name" />

        <!--Button Login-->
        <Button android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login" />

        <!--Button Register-->
        <Button android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_register" />

        <!--Button Cancel-->
        <Button android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel" />

</LinearLayout>
</ScrollView>