<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_create_page"
    tools:context="org.teamchat.Activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/CreatePageFields"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/abc_text_size_subhead_material"
                    android:text="Crea una pagina nuova"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    app:counterMaxLength="100"
                    android:id="@+id/input_layout_Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/FullWidthEditText"
                        android:singleLine="true"
                        android:inputType="textCapSentences"
                        android:id="@+id/txtTitolo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtTitlo" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_Descr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/FullWidthEditText"
                        android:id="@+id/txtDesrizione"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtDescr" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    app:counterMaxLength="100"
                    android:id="@+id/input_layout_Pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:inputType="textPassword"
                        style="@style/FullWidthEditText"
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtPass" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:shadowRadius="0"
                    android:padding="20dp"
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Crea" />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@id/CreatePageFields"
                android:id="@+id/AddPageFields"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/abc_text_size_subhead_material"
                    android:text="Oppure aggiungi una già esistente."
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.TextInputLayout
                    app:counterMaxLength="100"
                    android:id="@+id/input_layout_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        style="@style/FullWidthEditText"
                        android:inputType="number"
                        android:id="@+id/txtID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtID" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    app:counterMaxLength="100"
                    android:id="@+id/input_layout_Pass_Add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:inputType="textPassword"
                        style="@style/FullWidthEditText"
                        android:id="@+id/txtPassword_Add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtPass" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:shadowRadius="0"
                    android:padding="20dp"
                    android:id="@+id/btn_Add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Aggiungi" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
